[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Max Marze"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
nalgebra = "0.31.4"
nom = "7.1.1"
pico-args = "0.5.0"
rayon = "1.6.1"
regex = "1.7.0"
rustc-hash = "1.1.0"
scan_fmt = "0.2.6"
serde = "1.0.150"
serde_json = "1.0.89"
